--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.10",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-query": "^3.39.1",
