--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "sass": "^1.52.1",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-table": "^7.7.12",
     "cypress": "^10.0.2"
   }
 }
